# pidgin

./: .gitignore  CHANGES.md  Cargo.toml  README.md
benches/: regex_comparison.rs
src/: base.rs  grammar.rs  lib.rs  macros.rs  main.rs  matching.rs  pidgin.rs  util.rs
tests/: lib.rs  macro.rs  programmatic.rs
