[package]
name = "pidgin"
version = "0.4.2"
authors = ["dfhoughton <dfhoughton@gmail.com>"]
description= "simple non-recursive grammars"
homepage = "https://github.com/dfhoughton/pidgin"
repository = "https://github.com/dfhoughton/pidgin"
documentation = "https://docs.rs/pidgin"
readme = "README.md"
keywords = [ "grammar", "regex", "parsing" ]
categories = [ "parsing", "text-processing" ]
license = "MIT"
edition = "2018"

[profile.release]
panic = "abort"

[dependencies]
regex = "1.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "0"

[dev-dependencies]
rand = "0.7"
criterion = "0.3"
serde_json = "1"

[[bench]]
name = "regex_comparison"
harness = false
