[package]
name = "pidgin"
version = "0.4.4"
authors = ["dfhoughton <dfhoughton@gmail.com>"]
description= "simple non-recursive grammars"
homepage = "https://github.com/dfhoughton/pidgin"
repository = "https://github.com/dfhoughton/pidgin"
documentation = "https://docs.rs/pidgin"
readme = "README.md"
keywords = [ "grammar", "regex", "parsing" ]
categories = [ "parsing", "text-processing" ]
license = "MIT"
edition = "2018"

[profile.release]
panic = "abort"

[dependencies]
regex = "1.7.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1"

[dev-dependencies]
rand = "0.8"
criterion = "0.4.0"
serde_json = "1"

[[bench]]
name = "regex_comparison"
harness = false
